fixed scrollbar issue

--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -4,10 +4,10 @@
     box-sizing: border-box;
 }
 
+html,
 body {
     overflow-x: hidden;
     width: 100%;
     cursor: none;
-    opacity: 1; 
+    opacity: 1;
 }
-
