--- a/scss/layout/_content.scss
+++ b/scss/layout/_content.scss
@@ -11,7 +11,8 @@
 .content {
     position: relative;
     z-index: 20;
-    width: 750px;
+    width: auto;
+    max-width: 750px;
     margin-left: 400px;
     margin-right: 0;
     margin-top: -30vh;
